--- a/api/shops/models/shops.settings.json
+++ b/api/shops/models/shops.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "shops",
   "info": {
-    "name": "Shops"
+    "name": "Shops",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,6 +16,9 @@
     },
     "description": {
       "type": "richtext"
+    },
+    "products": {
+      "collection": "products"
     }
   }
 }
