--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "strapi-connector-bookshelf": "3.2.5",
     "strapi-plugin-content-manager": "3.2.5",
     "strapi-plugin-content-type-builder": "3.2.5",
+    "strapi-plugin-documentation": "3.2.5",
     "strapi-plugin-email": "3.2.5",
     "strapi-plugin-upload": "3.2.5",
     "strapi-plugin-users-permissions": "3.2.5",
